# popug_legacy

./: .gitignore  .pre-commit-config.yaml
auth/: README.md  pyproject.toml  setup.cfg
auth/src/: main.py
auth/src/api/v1/: api_router.py
auth/src/api/v1/api/: auth.py  users.py
auth/src/config/: .env  database.py  settings.py
auth/src/core/: password.py  security.py
auth/src/database/: database.py  models.py
auth/src/migration/: alembic.ini  env.py
auth/src/migration/versions/: ece12439f1f2_001_added_users.py
auth/src/schemas/: errors.py  token.py  users.py
auth/src/utils/: utils.py
popug_legacy_sdk/: requirements.dev.txt  setup.py
popug_legacy_sdk/popug_legacy_sdk/config/: .env  auth.py  settings.py
popug_legacy_sdk/popug_legacy_sdk/database/: base.py  user.py
popug_legacy_sdk/popug_legacy_sdk/schemas/: __init__.py
